# multi-cloud-ai-cost-detector

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  alembic.ini  bandit-report.json  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  devops_task.md  documentation.md  feature_request.md
.github/workflows/: backend-ci.yml  codeql.yml  dependabot-automerge.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 20260627_2020_92b5be269a7b_create_initial_schema.py  20260629_0000_a1b2c3d4e5f6_create_users_and_revoked_tokens.py  20260629_0001_a1b2c3d4e5f7_simplify_local_auth.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: aws.py  azure.py  costs.py  gcp.py  health.py  root.py
app/auth/: __init__.py  dependencies.py  jwt.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
app/core/: cache.py  config.py  logging.py  openapi.py  rate_limit.py
app/database/: __init__.py  session.py
app/providers/: __init__.py  base.py  exceptions.py  registry.py  schemas.py
app/providers/aws/: __init__.py  mapper.py  provider.py
app/providers/azure/: __init__.py  mapper.py  provider.py
app/providers/gcp/: __init__.py  mapper.py  provider.py
app/schemas/: aws.py  azure.py  cost.py  gcp.py  health.py  root.py
app/services/: __init__.py  cost_aggregator.py  cost_service.py  health.py
app/services/aws/: __init__.py  cost_explorer.py  exceptions.py
app/services/azure/: __init__.py  cost_management.py  exceptions.py
app/services/gcp/: __init__.py  billing.py  exceptions.py
docs/: architecture.md  development-workflow.md  project-roadmap.md
docs/adr/: ADR-0001-fastapi.md  ADR-0002-postgresql.md  ADR-0003-clean-architecture.md  ADR-0004-docker-development.md  ADR-0005-ai-provider-abstraction.md
docs/superpowers/plans/: 2026-07-06-azure-provider-plan.md
docs/superpowers/specs/: 2026-07-06-azure-provider-design.md
scripts/: check_db.py
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_aws_endpoint.py  test_aws_exceptions.py  test_aws_integration.py  test_aws_schemas.py  test_azure_endpoint.py  test_azure_exceptions.py  test_azure_provider.py  test_azure_schemas.py  test_azure_service.py  test_cache.py  test_config.py  test_cost_aggregator.py  test_cost_explorer.py  test_cost_service.py  test_costs_endpoint.py  test_gcp_exceptions.py  test_gcp_provider.py  test_gcp_service.py  test_health_endpoint.py  test_providers_aws.py  test_providers_azure.py  test_providers_base.py  test_providers_registry.py  test_rate_limiting.py
