[project]
name = "multi-cloud-ai-cost-detective"
version = "0.1.0"
description = "FastAPI platform for detecting multi-cloud AI cost anomalies."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13.2,<2.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "bcrypt>=4.1.3,<5.0.0",
    "boto3>=1.34.0,<2.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "fastapi>=0.111.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.3.4,<3.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "SQLAlchemy[asyncio]>=2.0.31,<3.0.0",
    "uvicorn[standard]>=0.30.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.2.2,<9.0.0",
    "pytest-asyncio>=0.23.7,<1.0.0",
    "ruff>=0.5.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
