[project]
name = "multi-cloud-ai-cost-detective"
version = "0.4.1"
description = "FastAPI platform for detecting multi-cloud AI cost anomalies."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13.2,<2.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "azure-identity>=1.16.0,<2.0.0",
    "azure-mgmt-costmanagement>=4.0.0,<5.0.0",
    "azure-mgmt-subscription>=3.1.1,<4.0.0",
    "bcrypt>=4.1.3,<5.0.0",
    "boto3>=1.34.0,<2.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "fastapi>=0.111.0,<1.0.0",
    "google-cloud-bigquery>=3.24.0,<4.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.3.4,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "SQLAlchemy[asyncio]>=2.0.31,<3.0.0",
    "uvicorn[standard]>=0.30.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0,<1.0.0",
    "bandit[toml]>=1.7.0,<2.0.0",
    "black>=26.3.1,<27.0.0",
    "httpx>=0.27.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pip-audit>=2.7.0,<3.0.0",
    "pre-commit>=3.7.0,<5.0.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=0.23.7,<2.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.5.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
